--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@
 /SimplifiedSlotMachine/GameModel.Abstract/bin/Debug/net6.0
 /SimplifiedSlotMachine/GameModel.Abstract/obj
 /SimplifiedSlotMachine/SimplifiedSlotMachine.GameModel/bin/Debug/net6.0
+/.vs/J-API-Demos/FileContentIndex
