Chnage unit tests folder.

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,7 @@
 /.vs/J-API-Demos/FileContentIndex
 /SimplifiedSlotMachine.UnitTests/bin
 /SimplifiedSlotMachine.UnitTests/obj
+/SimplifiedSlotMachine/SimplifiedSlotMachine.UnitTests/bin
+/SimplifiedSlotMachine/SimplifiedSlotMachine.UnitTests/obj
+/SimplifiedSlotMachine/.vs/SimplifiedSlotMachine/v17/TestStore/0
+/SimplifiedSlotMachine/.vs/SimplifiedSlotMachine/DesignTimeBuild/.dtbcache.v2
