UI Console application

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,5 @@
 /SimplifiedSlotMachine/SimplifiedSlotMachine.UnitTests/obj
 /SimplifiedSlotMachine/.vs/SimplifiedSlotMachine/v17/TestStore/0
 /SimplifiedSlotMachine/.vs/SimplifiedSlotMachine/DesignTimeBuild/.dtbcache.v2
+/SimplifiedSlotMachine/SimplifiedSlotMachine.Console/bin/Debug/net6.0
+/SimplifiedSlotMachine/SimplifiedSlotMachine.Console/obj
