Initial Wheather code (useless)

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,5 @@
 /SimplifiedSlotMachine/.vs/SimplifiedSlotMachine/DesignTimeBuild/.dtbcache.v2
 /SimplifiedSlotMachine/SimplifiedSlotMachine.Console/bin/Debug/net6.0
 /SimplifiedSlotMachine/SimplifiedSlotMachine.Console/obj
+/MockyProducts2306/obj
+/MockyProducts2306/bin/Debug/net6.0
