--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@
 /MockyProducts2306/MockyProducts.Shared/obj
 /MockyProducts2306/MockyProducts.Shared/bin/Debug/net6.0
 /MockyProducts2306/MockyProducts.Service/obj
+/MockyProducts2306/MockyProducts.Service/bin/Debug/net6.0
