Fix and recreate Api project

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,5 @@
 /MockyProducts2306/MockyProducts.Shared/bin/Debug/net6.0
 /MockyProducts2306/MockyProducts.Service/obj
 /MockyProducts2306/MockyProducts.Service/bin/Debug/net6.0
+/MockyProducts2306/MockyProducts.Api/obj
+/MockyProducts2306/MockyProducts.Api/bin/Debug/net6.0
