--- a/MockyProducts2306/MockyProducts.Api/appsettings.Development.json
+++ b/MockyProducts2306/MockyProducts.Api/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConfigReaderSettings": {
+    "Url": "http://www.mocky.io/v2/5e307edf3200005d00858b49"
   }
 }
