--- a/MockyProducts2306/MockyProducts.Api/appsettings.json
+++ b/MockyProducts2306/MockyProducts.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConfigReaderSettings": {
+    "Url": "http://www.mocky.io/v2/5e307edf3200005d00858b49"
+  }
 }
