Add unit tests for the JsonReader

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,5 @@
 /MockyProducts2306/MockyProducts.Service/bin/Debug/net6.0
 /MockyProducts2306/MockyProducts.Api/obj
 /MockyProducts2306/MockyProducts.Api/bin/Debug/net6.0
+/MockyProducts2306/MockyProducts.UnitTests/bin/Debug/net6.0
+/MockyProducts2306/MockyProducts.UnitTests/obj
