Add Controller and modify Service unit tests

--- a/MockyProducts2306/MockyProducts.UnitTests/MockyProducts.UnitTests.csproj
+++ b/MockyProducts2306/MockyProducts.UnitTests/MockyProducts.UnitTests.csproj
@@ -24,6 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\MockyProducts.Api\MockyProducts.Api.csproj" />
     <ProjectReference Include="..\MockyProducts.Repository\MockyProducts.Repository.csproj" />
     <ProjectReference Include="..\MockyProducts.Service\MockyProducts.Service.csproj" />
   </ItemGroup>
