Add logging, versioning, type of result, exception handling, services, registrations, swagger problems

--- a/MockyProducts2306/MockyProducts.Api/appsettings.Development.json
+++ b/MockyProducts2306/MockyProducts.Api/appsettings.Development.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConfigReaderSettings": {
-    "Url": "http://www.mocky.io/v2/5e307edf3200005d00858b49"
+    "Url": "http://www.mocky.io/v2/5e307edf3200005d00858b49",
+    "TimeoutSeconds":  100
   }
 }
