Initial base project code

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@
 /MockyProducts2306/MockyProducts.Api/bin/Debug/net6.0
 /MockyProducts2306/MockyProducts.UnitTests/bin/Debug/net6.0
 /MockyProducts2306/MockyProducts.UnitTests/obj
+/RockPapSciApi/obj
