Initial structure change

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,5 @@
 /MockyProducts2306/MockyProducts.UnitTests/bin/Debug/net6.0
 /MockyProducts2306/MockyProducts.UnitTests/obj
 /RockPapSciApi/obj
+/RockPapSciApi/RockPapSci.Api/obj
+/RockPapSciApi/RockPapSci.Abstract/obj
