Establish RockPapSci service and write two methods GetChoices and GetRandomChoice. Add in controller.

--- a/RockPapSciApi/RockPapSci.Service/RockPapSci.Service.csproj
+++ b/RockPapSciApi/RockPapSci.Service/RockPapSci.Service.csproj
@@ -1,16 +1,17 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.1" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\RockPapSci.Data\RockPapSci.Data.csproj" />
     <ProjectReference Include="..\RockPapSci.Dtos\RockPapSci.Dtos.csproj" />
     <ProjectReference Include="..\RockPapSci.Service.Common\RockPapSci.Service.Common.csproj" />
   </ItemGroup>
