Added program configuration, settings, fixed bugs, added error handling and polly, swagger and http settings,  and other.

--- a/RockPapSciApi/RockPapSci.Api/appsettings.Development.json
+++ b/RockPapSciApi/RockPapSci.Api/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConfigReaderSettings": {
+    "RandomUrl": "https://rpssl.olegbelousov.online/random",
+    "TimeoutSeconds": 100
   }
 }
