--- a/RockPapSciApi/RockPapSci.Api/RockPapSci.Api.csproj
+++ b/RockPapSciApi/RockPapSci.Api/RockPapSci.Api.csproj
@@ -7,12 +7,21 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.1.0" />
+    <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="7.0.10" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\RockPapSci.Dtos\RockPapSci.Dtos.csproj" />
     <ProjectReference Include="..\RockPapSci.Service.Common\RockPapSci.Service.Common.csproj" />
+    <ProjectReference Include="..\RockPapSci.Service\RockPapSci.Service.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="ErrorHandling\" />
   </ItemGroup>
 
 </Project>
