--- a/RockPapSciApi/RockPapSci.Api/appsettings.json
+++ b/RockPapSciApi/RockPapSci.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConfigReaderSettings": {
+    "RandomUrl": "https://rpssl.olegbelousov.online/random"
+  }
 }
