Add initial unit tests for the game model

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,5 @@
 /RockPapSciApi/RockPapSci.Dtos/bin/Debug/net6.0
 /RockPapSciApi/RockPapSci.Service/bin/Debug/net6.0
 /RockPapSciApi/RockPapSci.Service.Common/bin/Debug/net6.0
+/RockPapSciApi/RockPapSci.UnitTests/bin/Debug/net6.0
+/RockPapSciApi/RockPapSci.UnitTests/obj
