--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,4 @@
 /RockPapSciApi/RockPapSci.Service.Common/bin/Debug/net6.0
 /RockPapSciApi/RockPapSci.UnitTests/bin/Debug/net6.0
 /RockPapSciApi/RockPapSci.UnitTests/obj
+/RockPapSciApi/.vs/RockPapSciApi
