--- a/RockPapSciApi/RockPapSci.UnitTests/RockPapSci.UnitTests.csproj
+++ b/RockPapSciApi/RockPapSci.UnitTests/RockPapSci.UnitTests.csproj
@@ -15,12 +15,19 @@
     <PackageReference Include="MSTest.TestAdapter" Version="2.2.10" />
     <PackageReference Include="MSTest.TestFramework" Version="2.2.10" />
     <PackageReference Include="coverlet.collector" Version="3.2.0" />
+    <PackageReference Include="RichardSzalay.MockHttp" Version="6.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\RockPapSci.Data\RockPapSci.Data.csproj" />
     <ProjectReference Include="..\RockPapSci.Service.Common\RockPapSci.Service.Common.csproj" />
     <ProjectReference Include="..\RockPapSci.Service\RockPapSci.Service.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Samples\RandomGeneratorService\RandomGenerator_Oleg_v189.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
