Add API unit tests

--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,5 @@
 /RockPapSciApi/RockPapSci.UnitTests/bin/Debug/net6.0
 /RockPapSciApi/RockPapSci.UnitTests/obj
 /RockPapSciApi/.vs/RockPapSciApi
+/RockPapSciApi/RockPapSci.Api.UnitTests/bin/Debug/net6.0
+/RockPapSciApi/RockPapSci.Api.UnitTests/obj
