Fix ignores and test results

--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,4 @@
 /RockPapSciApi/.vs/RockPapSciApi
 /RockPapSciApi/RockPapSci.Api.UnitTests/bin/Debug/net6.0
 /RockPapSciApi/RockPapSci.Api.UnitTests/obj
+/RockPapSciApi/RockPapSci.Api.UnitTests/TestResults
