TaxCalc Unit Tests for the calculator and fixes in calculator

--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,5 @@
 /TaxCalc/TaxCalc.Service/obj
 /TaxCalc/TaxCalc.Services.Common/bin/Debug/net6.0
 /TaxCalc/TaxCalc.Services.Common/obj
+/TaxCalc/TaxCalc.UnitTests/bin/Debug/net6.0
+/TaxCalc/TaxCalc.UnitTests/obj
