TaxCalc Api Configuration, Validation and Setup in program.cs and appsettings.

--- a/TaxCalc/TaxCalc.Api/appsettings.Development.json
+++ b/TaxCalc/TaxCalc.Api/appsettings.Development.json
@@ -4,5 +4,16 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "TaxJurisdictionConfiguration": {
+    "Jusriction": "demo",
+    "NoTaxMinAmount":  0,
+    "IncomeTaxMinAmount": 0,
+    "IncomeTaxMaxAmount":  999999,
+    "IncomeTaxPercent": 0.15,
+    "SocialTaxMinAmount": 1000,
+    "SocialTaxMaxAmount": 999999,
+    "SocialTaxPercent":  0,
+    "CharityFreePercent": 0,
   }
 }
