TaxCalc Idempotency and Memory Cache.

--- a/TaxCalc/TaxCalc.Api/appsettings.Development.json
+++ b/TaxCalc/TaxCalc.Api/appsettings.Development.json
@@ -5,15 +5,16 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "MyRedisConStr": "..........",
   "TaxJurisdictionConfiguration": {
     "Jusriction": "demo",
-    "NoTaxMinAmount":  0,
+    "NoTaxMinAmount": 0,
     "IncomeTaxMinAmount": 0,
-    "IncomeTaxMaxAmount":  999999,
+    "IncomeTaxMaxAmount": 999999,
     "IncomeTaxPercent": 0.15,
     "SocialTaxMinAmount": 1000,
     "SocialTaxMaxAmount": 999999,
-    "SocialTaxPercent":  0,
-    "CharityFreePercent": 0,
+    "SocialTaxPercent": 0,
+    "CharityFreePercent": 0
   }
 }
